@@ -13,6 +13,8 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Removed
 
+* remove Stretch-specific code in main Linux script
+
 ## [25.03] 2025-03-12
 
 ### Added
